--- a/BubblesEngine/BubblesEngine.csproj
+++ b/BubblesEngine/BubblesEngine.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="dotenv.net" Version="3.1.0" />
+    </ItemGroup>
+
 </Project>
