--- a/BubblesEngine/BubblesEngine.csproj
+++ b/BubblesEngine/BubblesEngine.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="dotenv.net" Version="3.1.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
