--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ solution: BubblesEngine.Tests.sln
 mono: none
 dotnet: 3.1.100
 install: 
-  - nuget restore BubblesEngine.Tests.sln
+  - dotnet restore BubblesEngine.Tests.sln
   - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
   - dotnet restore
