--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 os: osx
 language: csharp
-solution: BubblesEngine.Tests.sln
+solution: src/BubblesEngine.Tests.sln
 mono: none
 dotnet: 3.1.100
 install: 
-  - dotnet restore BubblesEngine.Tests.sln
+  - nuget restore src/BubblesEngine.Tests.sln
   - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
   - dotnet restore
-  - msbuild /p:Configuration=Release BubblesEngine.Tests.sln
+  - msbuild /p:Configuration=Release src/BubblesEngine.Tests.sln
   - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./MyProject.Tests/bin/Release/MyProject.Tests.dll
