--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
+    - name: Build&Test
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity detailed
