--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,5 +21,9 @@ jobs:
       run: dotnet restore
     - name: Build&Test
       run: dotnet build --no-restore
+
+  test: 
+    runs-on: macos-11
+    steps: 
     - name: Test
       run: dotnet test --no-build --verbosity detailed
