--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-
+    name: "Build and Restore"
     runs-on: macos-11
 
     steps:
@@ -21,8 +21,11 @@ jobs:
       run: dotnet restore
     - name: Build&Test
       run: dotnet build --no-restore
-
+    - name: Test
+      run: dotnet test --no-build --verbosity detailed
   test: 
+    name: "Test"
+    needs: [build]
     runs-on: macos-11
     steps: 
     - name: Test
