--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: "Build and Restore"
+    name: "Build and Test"
     runs-on: macos-11
 
     steps:
@@ -19,14 +19,7 @@ jobs:
         dotnet-version: 3.1.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build&Test
+    - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity detailed
-  test: 
-    name: "Test"
-    needs: [build]
-    runs-on: macos-11
-    steps: 
     - name: Test
       run: dotnet test --no-build --verbosity detailed
