--- a/BubblesAPI/BubblesAPI.csproj
+++ b/BubblesAPI/BubblesAPI.csproj
@@ -5,10 +5,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <Folder Include="Services" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="10.3.3" />
+      <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.0">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
