Add Bubbles Repository.

--- a/BubblesAPI/BubblesAPI.csproj
+++ b/BubblesAPI/BubblesAPI.csproj
@@ -18,5 +18,9 @@
       <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.22" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BubblesEngine\BubblesEngine.csproj" />
+    </ItemGroup>
+
 
 </Project>
