Update the App development json.

--- a/BubblesAPI/appsettings.Development.json
+++ b/BubblesAPI/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db": "Server=localhost;uid=my-user;pwd=mypass123;database=bubbles"
+  },
+  "Jwt": {
+    "Key": "bubblesSecretKey",
+    "Issuer": "bubblesApi"
   }
 }
