--- a/BubblesAPI/appsettings.Development.json
+++ b/BubblesAPI/appsettings.Development.json
@@ -11,7 +11,7 @@
     "db": "Server=localhost;uid=my-user;pwd=mypass123;database=bubbles"
   },
   "Jwt": {
-    "Key": "bubblesSecretKey",
+    "Key": "akey",
     "Issuer": "bubblesApi"
   }
 }
