--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet test --no-build --verbosity detailed
   deploy:
     name: "Deploy to Docker"
-    runs-on: macos-11
+    runs-on: ubuntu-latest
     needs: build
 
     steps:
