--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,10 +29,14 @@ jobs:
     needs: build
 
     steps:
-      - uses: actions/checkout@master
-      - name: Publish to Registry
-        uses: minddocdev/docker-publish-action@master
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          name: pronoytw/bubbles:v1
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: pronoytw/bubbles:v1
