--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,6 +36,6 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
       - name: Build Docker Image
-        run: docker build -f BubblesAPI/Dockerfile -t bubbles .
+        run: docker build -t bubbles:v1 .
       - name: Push to Docker hub
         run: docker push pronoytw/bubbles:v1
