--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: 5.x
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
@@ -25,7 +25,7 @@ jobs:
         run: dotnet test --no-build --verbosity detailed
   deploy:
     name: "Deploy to Docker"
-    runs-on: ubuntu-latest
+    runs-on: macos-11
     needs: build
 
     steps:
