--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,6 +37,6 @@ jobs:
         run: |
           docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD 
       - name: Build Docker Image
-        run: docker build -t bubbles:v1 .
+        run: docker build -t pronoytw/bubbles:v1 .
       - name: Push to Docker hub
-        run: docker push pronoytw/bubbles
+        run: docker push pronoytw/bubbles:v1
